Move to JAVA 20